// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.privacybudgetmanager;

option java_package = "org.wfanet.measurement.privacybudgetmanager";
option java_multiple_files = true;
option java_outer_classname = "ChargesProto";

// Represents an Almost Concentrated Differential Privacy(ACDP) charge in
// rho and theta that will committed made to a privacy budget.
message AcdpCharge {
  float rho = 1;
  float theta = 2;
}

message Charges {
  // Maps the population field id of the bucket to the interval charges.
  // Population field id is generated by adhearing to a PrivacyLandscape.
  // This id generation is stable.
  map<int32, IntervalCharges> population_index_to_charges = 1;

  message IntervalCharges {
    // Maximum 300 charges each corresponding to a vid interval charge.
    // Key is the ids from 0 to 299 representing the vid interval.
    // 300 is built into the system and it is not configurable.
    map<int32, AcdpCharge> vid_interval_index_to_charges = 1;
  }
}
